# PJC

./: CMakeLists.txt  main.cpp
exc/: box_print.cpp  compare_inputs.cpp  dot_product.cpp  duplicates.cpp  java_to_cpp.cpp  lambda_refactor.cpp  max_elements.cpp  palindrome.cpp  reverse_words.cpp  sort_bigger_half.cpp  string_operations.cpp
